# YIV

./: .pro  .qrc  CMakeLists.txt  ImageViewer  ImageViewer-deb.deb  ImageViewer.cpp  ImageViewer.h  main.cpp  main_moc.cpp
.github/workflows/: build.yml
ImageViewer-deb/DEBIAN/: control
ImageViewer-deb/usr/share/applications/: ImageViewer.desktop
ImageViewer.AppDir/: AppRun
